# hpp-statistics

./: CMakeLists.txt  NEWS  README.md
doc/: Doxyfile.extra.in  main.hh
include/hpp/statistics/: bin.hh  distribution.hh  fwd.hh  operators.hh  success-bin.hh
src/: CMakeLists.txt  bin.cc  operators.cc  success-bin.cc
tests/: CMakeLists.txt  test-distribution.cc  test-statistics.cc  test-successstatistics.cc
